$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.18-5 (opened May 21, 2010) 

	* RsquareAdj.default: handles vector arguments.

	* ordiellipse: works only with 2D data, and now uses only first
	two dimensions of input if more given. For instance, the following
	works now, but gave very cryptic error message previously:

	m <- decorana(dune)
	plot(m)
	with(dune.env, ordiellipse(m, Management))

	* ordiresids: removes now the row weights from Residuals and
	Fitted in CA. Now shows the same values that are shuffled or
	resampled in simulate.cca() where they are again weighted after
	being added to the new fitted value.

	* mantel.correlog: changes the Sturges rule to conform with the
	standard R nclass.Sturges ('ceiling' instead of 'round'). Extends
	and corrects documentation and messages.

Version 1.18-4 (closed May 21, 2010)

	* envfit: defaults now to 999 permutations. Used to be 0 or no
	permutations. 

	* metaMDS: can handle NA values in dissimilarities (but I do not
	know if isoMDS can handle them correctly).

	* mantel.correlog: accepts now user supplied breakpoints or number
	of classes like intended.

	* RsquareAdj.rda: uses now correct model df in rank deficit RDA
	models. 

	* adonis: implemented tie handling in permutations. 

	* predict.cca/rda: implemented 'newdata' for type =
	"response". For CCA, 'newdata' must be constraints (environmental
	data), and for CA they must be community data. Test version, not
	yet documented (except here).

Version 1.18-3 (closed April 15, 2010)

	* new version opened with the release of vegan 1.17-2 (March 8,
	2010). 

	* DESCRIPTION: Corrected the name of Bob O'Hara (also in release
	1.17-2). 

	* scores.cca/scores.rda: scores will always have names even if the
	input data have no names. This fixes some display issues that
	Pierre Legendre had with biplot.rda(), and makes redundant the
	name checking code in summary.cca (the redundant code was not yet